ipc/ipdl/test/ipdl/error/dtorReserved.ipdl
//error: lexically invalid characters `~SomeMsg();

[ChildProc=any]
protocol dtorReserved {

    // it's an error to use old-style dtor syntax

child:
    ~SomeMsg();

};
